# customer-churn-prediction

./: .gitignore  README.md  new_churn_predictions.csv  pyproject.toml
app/: churn_app.py
models/: churn_model.pkl
src/: __init__.py  data_preprocessing.py  predict.py  train_model.py
