[tool.poetry]
name = "Customer Churn Prediction"
version = "0.1.0"
description = "A project for predicting customer churn using Machine Learning"
authors = ["Vety Bhakti Lestari <vetylestari3@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
streamlit= "^1.41.1"
pandas= "^2.2.3"
numpy = "^2.2.2"
scikit-learn = "^1.6.1" 
xgboost = "^2.1.3"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
joblib = "^1.4.2"
plotly = "^5.24.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"